[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Carlos A. Parra f. <carlos.a.parra.f@outlook.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
pico-args = "0.5.0"
